Fix checkbox layout bug

--- a/client/src/styles/Layouts.module.scss
+++ b/client/src/styles/Layouts.module.scss
@@ -15,7 +15,6 @@
 
 .objectIcon {
   display: grid;
-  place-items: center;
   user-select: none;
   width: 160px;
   height: 160px;
